At last, the scrollbar issue is fixed with Chrome.

--- a/main.css
+++ b/main.css
@@ -1329,9 +1329,7 @@ body {
   }
 }
 
-::-webkit-scrollbar {
-  display: none;
-}
+::-webkit-scrollbar-button
 
 .cursor {
   font-size: 12px;
